Added basic framework to start with

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<script src="three.min.js"></script>
-		<script src="marchingCubesExample.js"></script>>
+		<script src="cs336util.js"></script>
+		<script src="marchingCubesExample.js"></script>
 	</body>
 </html>
