Add orbit controls

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<body>
 		<script src="three.min.js"></script>
 		<script src="cs336util.js"></script>
+		<script src="OrbitControls.js"></script>
 		<script src="marchingCubesExample.js"></script>
+
 	</body>
 </html>
