Add basic marching cubes example yeeted from three.js examples

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="three.min.js"></script>
 		<script src="cs336util.js"></script>
 		<script src="OrbitControls.js"></script>
+		<script src="MarchingCubes.js"></script>
 		<script src="marchingCubesExample.js"></script>
 
 	</body>
