Add terrain, attempt to add color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<body>
 		<script src="three.min.js"></script>
 		<script src="cs336util.js"></script>
+		<script src="PointerLockControls.js"></script>
 		<script src="OrbitControls.js"></script>
+		<script src="FirstPersonControls.js"></script>
+		<script src="ImprovedNoise.js"></script>
 		<script src="MarchingCubes.js"></script>
 		<script src="marchingCubesExample.js"></script>
 
