Figured out how to add color to scene - can't make things red???

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="three.min.js"></script>
+		<script src="three.js"></script>
 		<script src="cs336util.js"></script>
 		<script src="PointerLockControls.js"></script>
 		<script src="OrbitControls.js"></script>
