--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="ImprovedNoise.js"></script>
 		<script src="MarchingCubes.js"></script>
 		<script src="marchingCubesExample.js"></script>
+		<script>window.onload = main</script>
 
 	</body>
 </html>
