--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		</style>
 	</head>
 	<body>
+		<canvas id="theCanvas" width="400" height="400">Please use a browser that supports "canvas"</canvas>
 		<script src="three.js"></script>
 		<script src="cs336util.js"></script>
 		<script src="PointerLockControls.js"></script>
