--- a/marchingCubesDemo.html
+++ b/marchingCubesDemo.html
@@ -10,14 +10,13 @@
 	</head>
 	<body>
 		<canvas id="theCanvas" width="400" height="400">Please use a browser that supports "canvas"</canvas>
-		<script src="three.js"></script>
-		<script src="cs336util.js"></script>
+		<script src="three.min.js"></script>
 		<script src="PointerLockControls.js"></script>
 		<script src="OrbitControls.js"></script>
 		<script src="FirstPersonControls.js"></script>
 		<script src="ImprovedNoise.js"></script>
 		<script src="MarchingCubes.js"></script>
-		<script src="marchingCubesExample.js"></script>
+		<script src="MarchingCubesDemo.js"></script>
 		<script>window.onload = main</script>
 
 	</body>
